[tool.poetry]
name = "asyncio-exceptions-tests"
version = "0.1.0"
description = "Code to test out exceptions with asyncio"
authors = ["Jeff Thompson <mythrndr@gmail.com>"]
readme = "README.md"
packages = [{include = "asyncio_exceptions_tests"}]

[tool.poetry.dependencies]
python = "^3.10"


[tool.poetry.group.dev.dependencies]
janus = "^1.0.0"
asyncio = "^3.4.3"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
